project/worked_out/cd_2/ui/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: reddit
    component: ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reddit
      component: ui
  template:
    metadata:
      name: ui
      labels:
        app: reddit
        component: ui
    spec:
      containers:
        - name: ui
					image: gcr.io/docker20/user02-ui
