project/worked_out/cd_2/ui/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ui
spec:
  type: LoadBalancer
  selector:
    app: reddit
    component: ui
  ports:
  - protocol: TCP
    port: 9292
    targetPort: 9292
